--- a/style.css
+++ b/style.css
@@ -1,14 +1,32 @@
 #clock {
+    
 }
 
 #clock img {
+    
+}
+
+#face {
+    position: relative;
 }
 
 #hour {
+    position: absolute;
+    top: 0px;
+    right: 10%;
+    transform: rotate(0deg);
 }
 
 #minute {
+    position: absolute;
+    top: 0px;
+    right: 10%;
+    transform: rotate(0deg);
 }
 
 #second {
+    position: absolute;
+    top: 0px;
+    right: 10%;
+    transform: rotate(0deg);
 }
